# OpenIRC

client/OpenIRCClient/: build.gradle  gradle.properties
client/OpenIRCClient/src/main/java/com/openircclient/: InfoGetter.java  Openircclient.java
client/OpenIRCClient/src/main/java/com/openircclient/chat/: ChatHandler.java
client/OpenIRCClient/src/main/java/com/openircclient/mixins/: MinecraftMainMixin.java
client/OpenIRCClient/src/main/java/com/openircclient/network/: HandshakeManager.java  IrcWebSocketClient.java  ReconnectionManager.java
client/OpenIRCClient/src/main/java/com/openircclient/utils/: ChatUtils.java  ClipboardUtils.java  ConfigUtils.java  CryptoUtils.java  HWIDUtils.java  HashUtils.java  KeyExchangeUtils.java  UiFactory.java
client/OpenIRCClient/src/main/java/com/openircclient/windows/: BanWindow.java  InfoDisplayWindow.java  LoginWindow.java
client/OpenIRCClient/src/main/resources/: fabric.mod.json  openircclient.mixins.json
server/: Cargo.toml
server/src/: config.rs  logger.rs  main.rs
server/src/logic/: auth.rs  commands.rs  mod.rs
server/src/network/: crypto.rs  mod.rs  packets.rs  rate_limit.rs
server/src/storage/: database.rs  mod.rs
