[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
base64 = "0.21"
sha2 = "0.10"
futures-util = "0.3"
rand = "0.8"
chrono = "0.4"
colored = "2.1"